# prompt-lint

./: README.md  pyproject.toml
src/prompt_lint/: __init__.py
tests/: test_lint.py
